# flyg

./: .env  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.md  README.md  Rocket.toml  SECURITY.md  TODO.md  docker-compose.yml  get_airport_infos.sh  get_closest_airports_to_edln.sh  get_token.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bugs.yml  enhancement.yml
.github/workflows/: check-backend-code.yml  check-frontend-code.yml  flyg_backend_build.yml  flyg_core_build.yml  flyg_security_audit.yml  rust.yml
flyg/: Cargo.toml
flyg-backend/: Cargo.toml  Dockerfile  create_backend_container.sh  diesel.toml  docker-compose.yml  initial_data.sql
flyg-backend/.run/: Run flyg-api-endpoints.run.xml
flyg-backend/flyg-api-endpoints/: Cargo.toml
flyg-backend/flyg-api-endpoints/src/: main.rs
flyg-backend/flyg-api-endpoints/src/routes/: auth.rs  authorization.rs  mod.rs  pilot.rs
flyg-backend/migrations/2021-01-25-152719_create_airport_tables/: down.sql  up.sql
flyg-backend/migrations/2021-01-25-152719_create_airports/: up.sql
flyg-backend/migrations/2021-02-06-153718_create_users_table/: up.sql
flyg-backend/migrations/2021-02-06-153914_create_aircraft_tables/: down.sql  up.sql
flyg-backend/migrations/2021-03-01-150953_create_aircraft_market/: down.sql  up.sql
flyg-backend/migrations/2021-03-01-151729_create_flight_log/: down.sql  up.sql
flyg-backend/src/: lib.rs  main.rs  schema.rs
flyg-backend/src/database/: mod.rs  schema.rs  sql_types.rs  types.rs
flyg-backend/src/database/airports/: mod.rs
flyg-backend/src/database/auth/: mod.rs
flyg-backend/src/routes/: airports.rs  auth.rs  health.rs  mod.rs
flyg-client/: Cargo.toml
flyg-client/src/: main.rs
flyg-core/: Cargo.toml
flyg-core/src/: lib.rs
flyg-frontend/: package-lock.json  package.json
flyg-frontend/.run/: Run dev-server.run.xml
flyg-gui/: .eslintcache  Cargo.toml  package-lock.json  package.json
flyg-gui/src/: main.rs
flyg-gui/src-tauri/: Cargo.toml  tauri.conf.json
flyg-msfs2020/: Cargo.toml  build.rs  wrapper.h
flyg-msfs2020/src/: lib.rs  simconnect.rs
flyg/src/: simconnect.rs
msfs-client/: Cargo.toml  build.rs
msfs-client/src/: main.rs  simconnect.rs
