[package]
name = "flyg-backend"
version = "0.1.0"
authors = ["Tim Hütz <tim+github@janke.biz>"]
edition = "2018"
description = "Backend system for the Flyg flight economy simulation system."

[dependencies.diesel]
version = "1.4"
default-features = false
features = ["postgres", "chrono"]

[dependencies.rocket]
version = "0.4"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["diesel_postgres_pool", "json"]

[dependencies.chrono]
version = "0.4"

[dependencies.log]
version = "0.4"

[dependencies.fern]
version = "0.6"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.bcrypt]
version = "0.9"

[dependencies.jwt]
version = "0.12"
