[package]
name = "flyg-backend"
version = "0.0.1"
authors = ["Tim Hütz <tim+github@janke.biz>"]
edition = "2018"
description = "Backend system for the Flyg flight economy simulation system."

[dependencies.lazy_static]
version = "1.4"

[dependencies.diesel]
version = "1.4"
default-features = false
features = ["postgres", "chrono"]

[dependencies.diesel_migrations]
version = "1.4"

[dependencies.postgis]
version = "0.8"

[dependencies.rocket]
version = "0.4"
default-features = false

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["diesel_postgres_pool", "json"]

[dependencies.chrono]
version = "0.4"

[dependencies.log]
version = "0.4"

[dependencies.fern]
version = "0.6"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.bcrypt]
version = "0.9"

[dependencies.jsonwebtoken]
version = "7.2"

[dependencies.toml]
version = "0.5"