[package]
name = "flyg-client"
version = "0.1.0"
authors = ["Tim Hütz <tim+github@janke.biz>"]
edition = "2018"

[[bin]]
name = "flyg-client"
path = "src/main.rs"

[dependencies.flyg-msfs2020]
path = "../flyg-msfs2020"

[dependencies.chrono]
version = "0.4"

[dependencies.fern]
version = "0.6"

[dependencies.log]
version = "0.4"

[dependencies.dialoguer]
version = "0.7"