[package]
name = "flyg-api-endpoints"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
exclude.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies.chrono]
version = "0.4.31"
default-features = false
features = ["clock"]

[dependencies.fern]
version = "0.6.2"
default-features = false

[dependencies.rocket]
version = "0.5.0"
default-features = false

[dependencies.serde]
version = "1.0.193"
default-features = false
features = ["derive"]

[dependencies.serde_json]
version = "1.0.108"
default-features = false
features = ["std"]

[dependencies.utoipa]
version = "4.1.0"
default-features = false
features = ["rocket_extras"]

[dependencies.utoipa-swagger-ui]
version = "5.0.0"
default-features = false
features = ["rocket", "debug-embed"]